--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
